--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 | Commando      | Uitleg         |
 | ------------- |:-------------:|
-| col 3 is      | right-aligned |
-| col 2 is      | centered      |
-| zebra stripes | are neat      | 
+| /mail read      | Lees je berichten. |
+| /mail send [speler] [bericht]| Stuur het bericht [bericht] nar speler [speler].      |
+| /mail clear | Verwijder je berichten. Handig als je ze gelezen hebt.      | 
